[package]
name = "gardena-rs"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
reqwest = { version = "0.10", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
url = "2.1"
rand = "0.7"
enum-utils = "0.1"
log = "0.4"

tungstenite = { version = "0.10", optional = true }
async-tungstenite = { version = "0.4", optional = true }
async-std = {version = "1.5", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "0.2", optional = true, features = ["full"] }

hocon = { version = "0.3", optional = true }
hyper = { version = "0.13", optional = true }
lazy_static = { version = "1.4", optional = true }
clap = { git = "https://github.com/clap-rs/clap", optional = true }
env_logger = { version = "0.7", optional = true }

[features]
# default = ["websocket-tokio"]
websocket-asyncstd = [ "tungstenite", "async-tungstenite", "async-tungstenite/async-std-runtime", "async-tungstenite/async-native-tls", "futures", "async-std" ]
websocket-tokio = [ "tungstenite", "async-tungstenite", "async-tungstenite/tokio-runtime", "async-tungstenite/tokio-tls", "futures", "tokio" ]
web-monitor = [ "hocon", "hyper", "lazy_static", "clap", "websocket-tokio", "env_logger" ]

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
clap = { git = "https://github.com/clap-rs/clap" }

[[bin]]
name = "monitor"
required-features = [ "web-monitor" ]

[[example]]
name = "test"
required-features = [ "websocket-asyncstd" ]
